feat: implement CalculateInterestAndOrderThem

--- a/CathayPractices.UnitTests/CathayPractices.UnitTests.csproj
+++ b/CathayPractices.UnitTests/CathayPractices.UnitTests.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CathayPractices\CathayPractices.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
